# stake-knife

./: .gitignore  Cargo.toml  Cli.md  Readme.md  examples.md
.github/workflows/: ci.yml  release.yml
src/: deposit.rs  keygen.rs  keystore.rs  main.rs  mnemonic.rs  wallet.rs
tests/: cli.rs  test_batch_keystores.rs  test_cli_json_mnemonic.rs  test_compatibility.rs  test_json_file_output.rs  test_key_derivation.rs  test_keystore_recovery.rs
tests/reference_data/: deposit_data-1745512048.json  keystore-m_12381_3600_5_0_0-1745512048.json  keystore-m_12381_3600_6_0_0-1745512048.json  keystore-m_12381_3600_7_0_0-1745512048.json
