[package]
name = "stake-knife"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
bip39 = { version = "2.0", features = ["rand"] }   # BIP-39 mnemonic generation
anyhow = "1.0"                                     # Error handling

[dev-dependencies]
assert_cmd = "2.0"    # For CLI integration testing
predicates = "2.1"    # For output assertions
